--- a/cagrid-features/pom.xml
+++ b/cagrid-features/pom.xml
@@ -170,6 +170,17 @@
 			<artifactId>cagrid-gme-wsrf</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-mms-service</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-mms-wsrf</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 
 		<!-- Third Party Deps -->
 		<dependency>
