--- a/cagrid-mms/pom.xml
+++ b/cagrid-mms/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.cagrid</groupId>
@@ -126,7 +127,7 @@
 		<module>cagrid-mms-api</module>
 		<module>cagrid-mms-service</module>
 		<module>cagrid-mms-wsrf</module>
-	<!--	<module>cagrid-mms-systest</module> -->
+		<module>cagrid-mms-systest</module>
 		<module>cagrid-mms-soap-client</module>
 	</modules>
 </project>
