--- a/cagrid-mms/cagrid-mms-systest/pom.xml
+++ b/cagrid-mms/cagrid-mms-systest/pom.xml
@@ -5,7 +5,7 @@
         <artifactId>cagrid-mms</artifactId>
         <version>2.1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>cagrid-mms-tests</artifactId>
+    <artifactId>cagrid-mms-systest</artifactId>
     <name>caGrid MMS Sys Tests</name>
 
 
