--- a/cagrid-mms/cagrid-mms-service/pom.xml
+++ b/cagrid-mms/cagrid-mms-service/pom.xml
@@ -1,211 +1,201 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.cagrid</groupId>
-        <artifactId>cagrid-mms</artifactId>
-        <version>2.1.0-SNAPSHOT</version>
-    </parent>
-    <artifactId>cagrid-mms-service</artifactId>
-    <packaging>bundle</packaging>
-    <name>caGrid MMS Service</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.cagrid</groupId>
+		<artifactId>cagrid-mms</artifactId>
+		<version>2.1.0-SNAPSHOT</version>
+	</parent>
+	<artifactId>cagrid-mms-service</artifactId>
+	<packaging>bundle</packaging>
+	<name>caGrid MMS Service</name>
 
-    <properties>
-        <db.name>mms</db.name>
-    </properties>
+	<properties>
+		<db.name>mms</db.name>
+	</properties>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <extensions>true</extensions>
-                <configuration>
-                    <instructions>
-                        <DynamicImport-Package>*</DynamicImport-Package>
-                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Export-Package/>
-                        <Private-Package>
-                            org.cagrid.mms.service.impl,
-                            org.cagrid.mms.service.impl.cadsr
-                        </Private-Package>
-                        <Import-Package>
-                            net.sf.cglib.proxy
-                        </Import-Package>
-                        <Embed-Dependency>
-                        </Embed-Dependency>
-                    </instructions>
-                </configuration>
-            </plugin>
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Embed-Dependency>*;scope=compile|runtime|system;artifactId=!spring*</Embed-Dependency>
+						<Embed-Transitive>true</Embed-Transitive>
+						<DynamicImport-Package>*</DynamicImport-Package>
+						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+						<Export-Package />
+						<Private-Package>
+							org.cagrid.mms.service.impl,
+							org.cagrid.mms.service.impl.cadsr
+						</Private-Package>
+						<Import-Package>
+						</Import-Package>
+					</instructions>
+				</configuration>
+			</plugin>
 
 
-        </plugins>
 
-    </build>
+		</plugins>
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>ossrh</id>
-            <name>Sonatype OSS Repository</name>
-            <url>http://oss.sonatype.org/content/groups/public</url>
-            <layout>default</layout>
-        </pluginRepository>
-    </pluginRepositories>
+	</build>
 
-    <repositories>
-        <repository>
-            <id>NCI</id>
-            <name>NCI</name>
-            <url>https://ncimvn.nci.nih.gov/nexus/content/groups/public/</url>
-        </repository>
-    </repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>ossrh</id>
+			<name>Sonatype OSS Repository</name>
+			<url>http://oss.sonatype.org/content/groups/public</url>
+			<layout>default</layout>
+		</pluginRepository>
+	</pluginRepositories>
 
-    <dependencies>
-        <dependency>
-            <groupId>cacore</groupId>
-            <artifactId>sdk-client-framework</artifactId>
-            <version>4.0</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/sdk-client-framework.jar</systemPath>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate</artifactId>
-            <version>3.2.0.ga</version>
-        </dependency>
-        <dependency>
-            <groupId>acegisecurity</groupId>
-            <artifactId>acegi-security</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-orm</artifactId>
-            <version>3.0.7.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-discovery</groupId>
-            <artifactId>commons-discovery</artifactId>
-            <version>0.5</version>
-        </dependency>
-        <dependency>
-            <groupId>cagrid</groupId>
-            <artifactId>cagrid-cql-cql</artifactId>
-            <version>1.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.axis</groupId>
-            <artifactId>axis</artifactId>
-            <version>1.4</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.xml</groupId>
-            <artifactId>jaxrpc-api</artifactId>
-            <version>1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>gov.nih.nci.caintegrator2</groupId>
-            <artifactId>caDSR-beans</artifactId>
-            <version>4.0</version>
-        </dependency>
-        <dependency>
-            <groupId>cagrid</groupId>
-            <artifactId>cagrid-metadatautils</artifactId>
-            <version>1.4</version>
-        </dependency>
-        <dependency>
-            <groupId>cagrid</groupId>
-            <artifactId>cagrid-core-tests</artifactId>
-            <version>1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>jdepend</groupId>
-            <artifactId>jdepend</artifactId>
-            <version>2.9.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>${wsrf.group}</groupId>
-            <artifactId>wsrf-jglobus</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>cagrid-mms-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>cagrid-gaards-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>cagrid-metadata-model</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>cagrid-opensaml-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>cagrid-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${wsrf.group}</groupId>
-            <artifactId>ws-model</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${wsrf.group}</groupId>
-            <artifactId>wsrf-faults-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${wsrf.group}</groupId>
-            <artifactId>wsrf-properties-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk14</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.santuario</groupId>
-            <artifactId>xmlsec</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>commons-dbcp</groupId>
-            <artifactId>commons-dbcp</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>org.springframework.orm</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>com.springsource.javax.persistence</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>javax.mail-api</artifactId>
-            <version>1.4.5</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.easymock</groupId>
-            <artifactId>easymock</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+	<repositories>
+		<repository>
+			<id>NCI</id>
+			<name>NCI</name>
+			<url>https://ncimvn.nci.nih.gov/nexus/content/groups/public/</url>
+		</repository>
+	</repositories>
+
+	<dependencies>
+		<dependency>
+			<groupId>cacore</groupId>
+			<artifactId>sdk-client-framework</artifactId>
+			<version>4.0</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/lib/sdk-client-framework.jar</systemPath>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate</artifactId>
+			<version>3.2.0.ga</version>
+		</dependency>
+<!-- 				<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>aopalliance</groupId>
+			<artifactId>aopalliance</artifactId>
+			<version>1.0</version>
+		</dependency> -->
+		<dependency>
+			<groupId>acegisecurity</groupId>
+			<artifactId>acegi-security</artifactId>
+			<version>1.0.0</version>
+<!-- 			<exclusions>
+				<exclusion>
+					<artifactId>spring-remoting</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>spring-dao</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>spring-web</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>spring-webmvc</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>spring-jdbc</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>spring-support</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+			</exclusions> -->
+		</dependency>
+<!-- 		<dependency>
+			<groupId>commons-discovery</groupId>
+			<artifactId>commons-discovery</artifactId>
+			<version>0.5</version>
+		</dependency> -->
+		<dependency>
+			<groupId>cagrid</groupId>
+			<artifactId>cagrid-cql-cql</artifactId>
+			<version>1.4</version>
+		</dependency>
+<!-- 		<dependency>
+			<groupId>org.apache.axis</groupId>
+			<artifactId>axis</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml</groupId>
+			<artifactId>jaxrpc-api</artifactId>
+			<version>1.1</version>
+		</dependency> -->
+		<dependency>
+			<groupId>gov.nih.nci.caintegrator2</groupId>
+			<artifactId>caDSR-beans</artifactId>
+			<version>4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>cagrid</groupId>
+			<artifactId>cagrid-metadatautils</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>cagrid</groupId>
+			<artifactId>cagrid-core-tests</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>jdepend</groupId>
+			<artifactId>jdepend</artifactId>
+			<version>2.9.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-mms-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-metadata-model</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${wsrf.group}</groupId>
+			<artifactId>ws-model</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${wsrf.group}</groupId>
+			<artifactId>wsrf-faults-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${wsrf.group}</groupId>
+			<artifactId>wsrf-properties-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
