Fixes to the Dorian Bootstrapper to support general installation.

--- a/cagrid-dorian/cagrid-dorian-service-tools/src/main/resources/dorian.properties
+++ b/cagrid-dorian/cagrid-dorian-service-tools/src/main/resources/dorian.properties
@@ -1,4 +1,4 @@
-cagrid.dorian.service.name=training_dorian
+cagrid.dorian.service.name=dorian
 cagrid.dorian.service.db.host=localhost
 cagrid.dorian.service.db.port=3306
 cagrid.dorian.service.db.user=root
@@ -38,7 +38,7 @@ cagrid.dorian.service.ca.password=admin
 cagrid.dorian.service.ca.policy.oid=
 cagrid.dorian.service.ca.issued.cert.key.size=1024
 cagrid.dorian.service.ca.auto.create=true
-cagrid.dorian.service.ca.auto.create.subject=O=caBIG,OU=caGrid,OU=Training,CN=caGrid Training CA 2
+cagrid.dorian.service.ca.auto.create.subject=O=caGrid,OU=Development,CN=caGrid Development CA
 cagrid.dorian.service.ca.auto.create.key.size=2048
 cagrid.dorian.service.ca.auto.create.lifetime.years=25
 cagrid.dorian.service.ca.auto.create.lifetime.months=0
