--- a/cagrid-mms/cagrid-mms-service/pom.xml
+++ b/cagrid-mms/cagrid-mms-service/pom.xml
@@ -22,11 +22,17 @@
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-						<Embed-Dependency>*;scope=compile|runtime|system;artifactId=!spring*</Embed-Dependency>
+						<Embed-Dependency>*;scope=compile|runtime|system;artifactId=!spring*|aop*|cagrid-metadata-model|cagrid-mms-api|ws-*|wsrf-*</Embed-Dependency>
 						<Embed-Transitive>true</Embed-Transitive>
 						<DynamicImport-Package>*</DynamicImport-Package>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package />
+						<Export-Package>gov.nih.nci.system.client.proxy,
+						gov.nih.nci.system.applicationservice,
+						org.acegisecurity.context.httpinvoker,
+						gov.nih.nci.system.query.cql,
+						gov.nih.nci.system.query.hibernate,
+						org.acegisecurity.providers.rcp
+						</Export-Package>
 						<Private-Package>
 							org.cagrid.mms.service.impl,
 							org.cagrid.mms.service.impl.cadsr
@@ -37,7 +43,38 @@
 				</configuration>
 			</plugin>
 
-
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-artifacts</id>
+						<phase>package</phase>
+						<goals>
+							<goal>attach-artifact</goal>
+						</goals>
+						<configuration>
+							<artifacts>
+								<artifact>
+									<file>src/main/resources/application-config-client.xml</file>
+									<type>xml</type>
+									<classifier>applicationConfigClient</classifier>
+								</artifact>
+								<artifact>
+									<file>src/main/resources/serviceMetadata.xml</file>
+									<type>xml</type>
+									<classifier>serviceMetadata</classifier>
+								</artifact>
+								<artifact>
+									<file>src/main/resources/serviceSecurityMetadata.xml</file>
+									<type>xml</type>
+									<classifier>serviceSecurityMetadata</classifier>
+								</artifact>
+								</artifacts>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 
 		</plugins>
 
@@ -82,12 +119,17 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
+		</dependency> -->
+		<!-- <dependency>
 			<groupId>aopalliance</groupId>
 			<artifactId>aopalliance</artifactId>
 			<version>1.0</version>
 		</dependency> -->
+		 <dependency>
+      		<groupId>log4j</groupId>
+     		<artifactId>log4j</artifactId>
+      		<version>1.2.5</version>
+    	</dependency>
 		<dependency>
 			<groupId>acegisecurity</groupId>
 			<artifactId>acegi-security</artifactId>
