Updates to support general GTS installation.

--- a/cagrid-gts/cagrid-gts-service-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-gts/cagrid-gts-service-tools/src/main/resources/bootstrapper.properties
@@ -1,20 +1,20 @@
-org.cagrid.commandline.prompt=true
-cagrid.default.truststore.location=/Users/oster/Desktop/cagrid-training-certs/mastergts/truststore.jks
-cagrid.default.truststore.password=changeit
+org.cagrid.commandline.prompt=false
+#cagrid.default.truststore.location=/Users/oster/Desktop/cagrid-training-certs/mastergts/truststore.jks
+#cagrid.default.truststore.password=changeit
 cagrid.gts.wsrf.host=localhost
 cagrid.gts.wsrf.port=4443
-cagrid.gts.wsrf.certificate.location=/Users/oster/Desktop/cagrid-training-certs/mastergts/mastergts.training.cagrid.org-sha2-cert.pem
-cagrid.gts.wsrf.key.location=/Users/oster/Desktop/cagrid-training-certs/mastergts/mastergts.training.cagrid.org-sha2-key.pem
+#cagrid.gts.wsrf.certificate.location=/Users/oster/Desktop/cagrid-training-certs/mastergts/mastergts.training.cagrid.org-sha2-cert.pem
+#cagrid.gts.wsrf.key.location=/Users/oster/Desktop/cagrid-training-certs/mastergts/mastergts.training.cagrid.org-sha2-key.pem
 cagrid.gts.wsrf.keystore.alias=host
-cagrid.gts.wsrf.keystore.password=changeit
-cagrid.gts.wsrf.key.password=changeit
+#cagrid.gts.wsrf.keystore.password=changeit
+#cagrid.gts.wsrf.key.password=changeit
 cagrid.gts.wsrf.truststore.password=changeit
-cagrid.gts.configure.legacy.wsrf=true
+cagrid.gts.configure.legacy.wsrf=false
 cagrid.gts.legacy-wsrf.port=8443
-cagrid.gts.legacy-wsrf.host=localhost
-cagrid.gts.legacy-wsrf.certificate.location=/Users/oster/Desktop/cagrid-training-certs/mastergts/mastergts.training.cagrid.org-cert.pem
-cagrid.gts.legacy-wsrf.key.location=/Users/oster/Desktop/cagrid-training-certs/mastergts/mastergts.training.cagrid.org-key.pem
+#cagrid.gts.legacy-wsrf.host=localhost
+#cagrid.gts.legacy-wsrf.certificate.location=/Users/oster/Desktop/cagrid-training-certs/mastergts/mastergts.training.cagrid.org-cert.pem
+#cagrid.gts.legacy-wsrf.key.location=/Users/oster/Desktop/cagrid-training-certs/mastergts/mastergts.training.cagrid.org-key.pem
 cagrid.gts.legacy-wsrf.keystore.alias=host
-cagrid.gts.legacy-wsrf.keystore.password=changeit
-cagrid.gts.legacy-wsrf.key.password=changeit
-cagrid.gts.wsrf.registration.index.url=http://localhost:8080/wsrf/services/DefaultIndexService
+#cagrid.gts.legacy-wsrf.keystore.password=changeit
+#cagrid.gts.legacy-wsrf.key.password=changeit
+#cagrid.gts.wsrf.registration.index.url=http://localhost:8080/wsrf/services/DefaultIndexService
