--- a/cagrid-gme/cagrid-gme-service-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-gme/cagrid-gme-service-tools/src/main/resources/bootstrapper.properties
@@ -6,7 +6,7 @@ cagrid.default.truststore.password=changeit
 
 cagrid.gme.wsrf.host=localhost
 cagrid.gme.wsrf.port=7742
-cagrid.gme.wsrf.url.path=wsrf/services/cagrid/gme
+cagrid.gme.wsrf.url.path=gme
 cagrid.gme.certificate.location=../../cagrid-dorian/cagrid-dorian-service/src/test/resources/ca-test/bmi-cacert.pem
 cagrid.gme.key.location=../../cagrid-dorian/cagrid-dorian-service/src/test/resources/ca-test/bmi-cakey.pem
 cagrid.gme.wsrf.keystore.alias=host
@@ -16,10 +16,10 @@ cagrid.gme.wsrf.keystore.password=changeit
 cagrid.gme.configure.legacy.wsrf=true
 cagrid.gme.legacy-wsrf.host=localhost
 cagrid.gme.legacy-wsrf.port=8443
-cagrid.gme.legacy-wsrf.url.path=wsrf/services/cagrid/GlobalModelExchange
+cagrid.gme.legacy-wsrf.path=wsrf/services/cagrid/GlobalModelExchange
 cagrid.gme.legacy-certificate.location=../../cagrid-dorian/cagrid-dorian-service/src/test/resources/ca-test/bmi-cacert.pem
 cagrid.gme.legacy-key.location=../../cagrid-dorian/cagrid-dorian-service/src/test/resources/ca-test/bmi-cakey.pem
-cagrid.gme.legacy-wsrf.keystore.alias=gme
+cagrid.gme.legacy-wsrf.keystore.alias=host
 cagrid.gme.legacy-wsrf.keystore.password=changeit
 cagrid.gme.legacy-wsrf.key.password=changeit
 
